<resources>
    <string name="app_name">Eolian fenix</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="Iniciar">Iniciar</string>
    <string name="Detener">Detener</string>
    <string name="Borrar">Limpiar</string>

    <string name="none_text">Parametro</string>
    <string name="cero">0</string>

    <string name="bms_max_pack_vtg">Máximo V</string>
    <string name="bms_min_pack_vtg">Mínimo V</string>
    <string name="bms_high_temp">Máxima °C</string>
    <string name="bms_low_temp">Mínima °C</string>
    <string name="motor_temp_izq">Izquierdo °C</string>
    <string name="motor_temp_der">Derecho °C</string>
    <string name="mppt_power">Potencia KW/h</string>

    <string name="action_settings">Settings</string>

</resources>
