<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:gauge="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:fitsSystemWindows="true"
    android:paddingBottom="-10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    android:background="@color/Azul_eolian"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="uchile.eolianfenix.MainActivity"
    tools:showIn="@layout/app_bar_main"

    >
    <!--
    <EditText

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    -->

    <!--
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Send"
        android:id="@+id/buttonSend"
        android:onClick="onClickSend"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/buttonStart" />

    -->
    <com.ntt.customgaugeview.library.GaugeView
        android:id="@+id/gauge_view_speed"
        android:layout_width="450dp"
        android:layout_height="450dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/logo_top"
        gauge:divisions="8"
        gauge:subdivisions="1"
        gauge:rangeValues="@array/Rango_speed"
        gauge:scaleEndValue="150"
        gauge:showInnerRim="false"
        gauge:showNeedle="true"
        gauge:showOuterBorder="false"
        gauge:showOuterRim="true"
        gauge:showOuterShadow="false"
        gauge:showRangeText="true"
        gauge:showRanges="true"
        gauge:showScale="true"
        gauge:textUnit="Km/hr"
        gauge:textUnitSize="0.06"
        gauge:textValueSize="0.15"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        />
    <com.ntt.customgaugeview.library.GaugeView
        android:id="@+id/gauge_view_potencia"
        android:layout_width="250dp"
        android:layout_height="250dp"
        gauge:divisions="7"
        gauge:subdivisions="1"
        gauge:rangeValues="@array/Rango_potencia"
        gauge:scaleEndValue="7"
        gauge:showInnerRim="false"
        gauge:showNeedle="true"
        gauge:showOuterBorder="false"
        gauge:showOuterRim="true"
        gauge:showOuterShadow="false"
        gauge:showRangeText="true"
        gauge:showRanges="true"
        gauge:showScale="true"
        gauge:textUnit="KW"
        gauge:textUnitSize="0.06"
        gauge:textValueSize="0.15"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_alignBottom="@+id/gauge_view_speed"
        android:layout_alignParentLeft="true"/>
    <com.ntt.customgaugeview.library.GaugeView
        android:id="@+id/gauge_view_soc"
        android:layout_width="250dp"
        android:layout_height="250dp"
        gauge:divisions="10"
        gauge:subdivisions="1"
        gauge:rangeValues="@array/Rangodesoc"
        gauge:scaleEndValue="100"
        gauge:showInnerRim="false"
        gauge:showNeedle="true"
        gauge:showOuterBorder="false"
        gauge:showOuterRim="true"
        gauge:showOuterShadow="false"
        gauge:showRangeText="true"
        gauge:showRanges="true"
        gauge:showScale="true"
        gauge:textUnit="%"
        gauge:textUnitSize="0.06"
        gauge:textValueSize="0.15"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_alignBottom="@+id/gauge_view_speed"
        android:layout_alignParentRight="true"/>

    <ImageView
        android:id="@+id/logo_top"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:foregroundGravity="center"
        android:src="@drawable/logo_gris"

        />

<!--
    <GridLayout
        android:id="@+id/mid_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@id/logo_top"

        android:background="@drawable/padding_centro"
        android:layout_centerHorizontal="true">

        <com.github.anastr.speedviewlib.SpeedView
            android:id="@+id/speedView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:background="@color/Azul_eolian"
            android:layout_centerHorizontal="true" />
    </GridLayout>
-->
    <TextView
        android:id="@+id/velocidad_invisible"
        android:text="@string/cero"
        android:layout_height="0dp"
        android:layout_width="0dp"
 />
    <!--
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Iniciar"
        android:id="@+id/buttonStart"
        android:onClick="onClickStart"
        android:background="@color/Gris_eolian"
        android:layout_below="@+id/logo_top"
        android:layout_toStartOf="@+id/gauge_view_speed" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Detener"
            android:id="@+id/buttonStop"
            android:onClick="onClickStop"
            android:background="@color/Gris_eolian"
            android:layout_alignBaseline="@+id/buttonStart"
            android:layout_alignBottom="@+id/buttonStart"
            android:layout_centerHorizontal="true" />



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Borrar"
            android:id="@+id/buttonClear"
            android:onClick="onClickClear"
            android:background="@color/Gris_eolian"
            android:layout_alignBaseline="@+id/buttonStop"
            android:layout_alignBottom="@+id/buttonStop"
            android:layout_toEndOf="@+id/buttonStop" />

        <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:rcProgress="30"
            app:rcSecondaryProgress="0"
            app:rcMax="100"
            app:rcRadius="8dp"
            app:rcBackgroundPadding="5dp"
            app:rcReverse="false"
            app:rcProgressColor="@color/Azul_eolian"
            app:rcSecondaryProgressColor="@color/Blanco"
            app:rcBackgroundColor="@color/Gris_eolian"
            android:id="@+id/roundCornerProgressBar"
            android:paddingBottom="0dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" />
    -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/bordes_redondos"
            android:id="@+id/imageView5"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
       <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_below="@id/logo_top"

            android:id="@+id/imagen_superior_derecha"
            android:src="@drawable/rueda"
            android:background="@drawable/bordes_redondos"
            android:padding="10dp"
            android:radius="10dip"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/imagen_suoerior_izquierda"
            android:src="@drawable/panel"
            android:background="@drawable/bordes_redondos"
            android:layout_below="@+id/logo_top"
            android:layout_alignStart="@+id/imageView5" />
        <ImageView
            android:id="@+id/image_bateria"
            android:layout_width="60dp"
            android:layout_height="80dp"
            android:src="@drawable/bateria"
            android:padding="1dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="0dp"/>
        <ImageView
            android:layout_width="60dp"
            android:layout_height="80dp"
            android:src="@drawable/termometro"
            android:layout_marginRight="20dp"
            android:id="@+id/imageView3"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true" />

        <GridLayout
            android:layout_width="270dp"
            android:layout_height="80dp"
            android:id="@+id/layout_centro"
            android:background="@color/Gris_eolian"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/motor_temp_izq_valor"
                android:text="@string/cero"
                style="@style/NumberFont"
                android:layout_row="0"
                android:layout_column="0"/>

            <TextView
                android:id="@+id/motor_temp_der_valor"
                android:text="@string/cero"
                style="@style/NumberFont"
                android:layout_row="0"
                android:layout_column="1" />

            <TextView
                android:id="@+id/motor_temp_izq_name"
                android:text="@string/motor_temp_izq"
                style="@style/CodeFont"
                android:layout_row="1"
                android:layout_column="0" />

            <TextView
                android:id="@+id/motor_temp_der_name"
                android:text="@string/motor_temp_der"
                style="@style/CodeFont"
                android:layout_row="1"
                android:layout_column="1"/>

        </GridLayout>
        <!--
        <GridLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/bordes_redondos"

            android:layout_below="@+id/imagen_suoerior_izquierda"
            android:id="@+id/layout_superior_izquierda">

            <TextView
                android:id="@+id/mppt_power_name"
                android:text="@string/mppt_power"
                android:layout_width="match_parent"
                style="@style/CodeFont"
                android:layout_row="1"
                android:layout_column="0" />

        </GridLayout>
        -->
        <GridLayout
            android:layout_width="270dp"
            android:layout_height="80dp"
            android:background="@color/Gris_eolian"
            android:id="@+id/gridLayout2"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/image_bateria"
            >

            <TextView
                android:id="@+id/bms_min_vtg_name"
                android:text="@string/bms_min_pack_vtg"
                style="@style/CodeFont"
                android:layout_row="1"
                android:layout_column="0" />
            <TextView
                android:id="@+id/bms_min_vtg_valor"
                android:text="@string/cero"
                style="@style/NumberFont"
                android:layout_row="0"
                android:layout_column="0" />
            <TextView
                android:id="@+id/bms_max_vtg_name"
                android:text="@string/bms_max_pack_vtg"
                style="@style/CodeFont"
                android:layout_row="1"
                android:layout_column="1" />
            <TextView
                android:id="@+id/bms_max_vtg_valor"
                android:text="@string/cero"
                style="@style/NumberFont"
                android:layout_row="0"
                android:layout_column="1" />
        </GridLayout>

        <GridLayout
            android:layout_width="270dp"
            android:layout_height="80dp"
            android:id="@+id/gridLayout3"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/imageView3"
            >

            <TextView
                android:id="@+id/bms_low_temp_name"
                android:text="@string/bms_low_temp"
                style="@style/CodeFont"
                android:layout_row="1"
                android:layout_column="0" />
            <TextView
                android:id="@+id/bms_min_temp_valor"
                android:text="@string/cero"
                style="@style/NumberFont"
                android:layout_row="0"
                android:layout_column="0" />
            <TextView
                android:id="@+id/bms_high_temp_name"
                android:text="@string/bms_high_temp"
                style="@style/CodeFont"
                android:layout_row="1"
                android:layout_column="1" />
            <TextView
                android:id="@+id/bms_max_temp_valor"
                android:text="@string/cero"
                style="@style/NumberFont"
                android:layout_row="0"
                android:layout_column="1" />
        </GridLayout>

        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="400dp"
            android:layout_height="55dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="420dp">

            <TextView
                android:id="@+id/bms_pack_current_valor"
                android:layout_width="133dp"
                android:text="0"
                android:layout_column="0"
                android:layout_row="0"
                style="@style/numero_velocimetro"
                />
            <TextView
                android:layout_width="133dp"
                android:text="A"
                android:layout_column="0"
                android:layout_row="1"
                style="@style/texto_velocimetro"
                />
            <TextView
                android:id="@+id/potencia_consumida"
                android:layout_width="133dp"
                android:text="0"
                android:layout_column="1"
                android:layout_row="0"
                style="@style/numero_velocimetro"
                />
            <TextView
                android:layout_width="133dp"
                android:text="KW"
                android:layout_column="1"
                android:layout_row="1"
                style="@style/texto_velocimetro"
                />
            <TextView
                android:id="@+id/bms_pack_vtg_valor"
                android:layout_width="133dp"
                android:text="0"
                android:layout_column="2"
                android:layout_row="0"
                style="@style/numero_velocimetro"
                />
            <TextView
                android:layout_width="133dp"
                android:text="V"
                android:layout_column="2"
                android:layout_row="1"
                style="@style/texto_velocimetro"
                />
        </GridLayout>
    <!--
    <TextView
        android:id="@+id/mppt_power_valor"
        style="@style/NumberFont"
        android:layout_width="0dp"
        android:layout_below="@+id/imageView5"
        android:layout_column="0"
        android:layout_marginStart="99dp"
        android:layout_marginTop="61dp"
        android:layout_row="0"
        android:layout_toEndOf="@+id/imageView5"
        android:text="@string/cero" />
    -->

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:weightSum="1"
            android:id="@+id/linearLayout"
            android:layout_alignParentEnd="true">

            <TextView
                android:id="@+id/serial_input"
                android:text="@string/cero"
                android:layout_height="0dp"
                android:layout_width="0dp" />
        </LinearLayout>


    </RelativeLayout>
